# worldimpoter-macos

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
WorldImporter/: ChunkGenerator.cpp  ChunkGenerator.h  ChunkGroupAllocator.cpp  ChunkGroupAllocator.h  ChunkLoader.cpp  ChunkLoader.h  EntityBlock.cpp  EntityBlock.h  GlobalCache.cpp  GlobalCache.h  JarReader.cpp  JarReader.h  LODManager.cpp  LODManager.h  MemoryMonitor.cpp  MemoryMonitor.h  ModelDeduplicator.cpp  ModelDeduplicator.h  RegionCache.cpp  RegionCache.h  RegionModelExporter.cpp  RegionModelExporter.h  SpecialBlock.cpp  SpecialBlock.h  TaskMonitor.cpp  TaskMonitor.h  WorldImporter.vcxproj  WorldImporter.vcxproj.filters  biome.cpp  biome.h  block.cpp  block.h  blockstate.cpp  blockstate.h  chunk.cpp  chunk.h  config.cpp  config.h  decompressor.cpp  decompressor.h  (+18 more)
WorldImporter/config/: config.json
WorldImporter/config/jsons/: fluids.json  solids.json
WorldImporter/include/: stb_image.h  stb_image_write.h
